[gd_scene load_steps=4 format=2]

[ext_resource path="res://1.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/PlayersMenu/NewPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PlayersMenu/PlayersMenu.gd" type="Script" id=3]

[node name="PlayersMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 139.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -156.0
margin_right = -79.0
margin_bottom = -72.0
text = "+"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 100.0
margin_top = 50.0
margin_right = 40.0
margin_bottom = 37.0
text = "Players"

[node name="NewPlayer" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="Add" to="." method="_on_Add_pressed"]
